--- a/index.html
+++ b/index.html
@@ -475,11 +475,11 @@
   <!-- CONTACT -->
   <section id="kontak">
     <h2>Kontak Kami</h2>
-    <p><strong>PT. Rimpang Nusantara Indonesia</strong></p>
+    <p><strong>CV SEKAWAN CIPTA DINAR</strong></p>
     <p>Jl. Rimpang Raya No.99, Pekalongan, Indonesia</p>
-    <p>Email: <a href="mailto:info@rimpangnusantara.com">info@rimpangnusantara.com</a></p>
-    <p>WhatsApp: <a href="https://wa.me/6281234567890" target="_blank">+62 812-3456-7890</a></p>
-    <p>Website: <a href="#">www.rimpangnusantara.com</a></p>
+    <p>Email: <a href="mailto:info@rimpangnusantara.com">info@dummy.com</a></p>
+    <p>WhatsApp: <a href="https://wa.me/6281234567890" target="_blank">+62 812-xxxx-xxxx</a></p>
+    <p>Website: <a href="#">www.dummy.com</a></p>
   </section>
 
   <footer>
