--- a/index.html
+++ b/index.html
@@ -472,15 +472,19 @@
     </div>
   </section>
 
-  <!-- CONTACT -->
-  <section id="kontak">
-    <h2>Kontak Kami</h2>
-    <p><strong>CV SEKAWAN CIPTA DINAR</strong></p>
-    <p>Jl. Rimpang Raya No.99, Pekalongan, Indonesia</p>
-    <p>Email: <a href="mailto:info@rimpangnusantara.com">info@dummy.com</a></p>
-    <p>WhatsApp: <a href="https://wa.me/6281234567890" target="_blank">+62 812-xxxx-xxxx</a></p>
-    <p>Website: <a href="#">www.dummy.com</a></p>
-  </section>
+<!-- CONTACT -->
+<section id="kontak">
+  <h2>Kontak Kami</h2>
+  <p><strong>CV SEKAWAN CIPTA DINAR</strong></p>
+  <p>Jl. Rimpang Raya No.99, Pekalongan, Indonesia</p>
+  <p>Email: <a href="mailto:info@rimpangnusantara.com">info@dummy.com</a></p>
+  <p><strong>Contact Person:</strong> Asih Prihastutik</p>
+  <p>WhatsApp: 
+    <a href="https://wa.me/6285230017377" target="_blank">+62 852-3001-7377</a> /
+    <a href="https://wa.me/6283136168789" target="_blank">+62 831-3616-8789</a>
+  </p>
+  <p>Website: <a href="#">www.dummy.com</a></p>
+</section>
 
   <footer>
     &copy; 2025 Rimpang Nusantara Indonesia. All rights reserved.
