--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section id="about">
       <h2>Tentang Kami</h2>
       <p class="subtitle">
-        Kami adalah eksportir terpercaya yang berfokus pada rimpang dan rempah
+        CV SEKAWAN CIPTA DINAR adalah eksportir terpercaya yang berfokus pada rimpang dan rempah
         Indonesia (Jahe, Kunyit, Lengkuas, Cengkeh, Kapulaga, Kemiri) dengan
         standar mutu ketat, transparansi supply-chain, dan fleksibilitas
         pemenuhan kebutuhan buyer di berbagai negara.
@@ -224,7 +224,7 @@
     <section id="proses">
       <h2>Proses & Kualitas</h2>
       <p class="subtitle">
-        Kami menerapkan 4 lapis kontrol kualitas dari hulu ke hilir dengan
+        CV SEKAWAN CIPTA DINAR menerapkan 4 lapis kontrol kualitas dari hulu ke hilir dengan
         laporan transparan untuk setiap batch.
       </p>
 
