--- a/index-en.html
+++ b/index-en.html
@@ -60,9 +60,7 @@
     <!-- ABOUT -->
     <section id="about">
       <h2>About Us</h2>
-      <p class="subtitle">
-        We are a trusted exporter specializing in Indonesian rhizomes and spices
-        (Ginger, Turmeric, Galangal, Clove, Cardamom, Candlenut) with strict
+      <p class="subtitle">CV SEKAWAN CIPTA DINAR are a trusted exporter specializing in Indonesian rhizomes and spices (Ginger, Turmeric, Galangal, Clove, Cardamom, Candlenut) with strict
         quality standards, transparent supply-chain, and buyer-oriented
         flexibility.
       </p>
@@ -216,7 +214,7 @@
     <section id="proses">
       <h2>Process & Quality</h2>
       <p class="subtitle">
-        We apply 4-layer QC from upstream to shipment, with transparent batch
+        CV SEKAWAN CIPTA DINAR apply 4-layer QC from upstream to shipment, with transparent batch
         reports.
       </p>
 
@@ -410,7 +408,7 @@
         Java 61256
       </p>
       <p>
-        Email: <a href="mailto:info@rimpangnusantara.com">info@dummy.com</a>
+        Email: <a href="mailto:asihprihastutik@gmail.com">asihprihastutik@gmail.com</a>
       </p>
       <p><strong>Contact Person:</strong> Asih Prihastutik</p>
       <p>
@@ -427,7 +425,7 @@
     </section>
 
     <footer>
-      &copy; 2025 Rimpang Nusantara Indonesia. All rights reserved.
+      &copy; 2025 CV SEKAWAN CIPTA DINAR. All rights reserved.
     </footer>
 
     <div class="toast" id="toast">
