--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
         Timur 61256
       </p>
       <p>
-        Email: <a href="mailto:info@rimpangnusantara.com">info@dummy.com</a>
+        Email: <a href="mailto:asihprihastutik@gmail.com">asihprihastutik@gmail.com</a>
       </p>
       <p><strong>Contact Person:</strong> Asih Prihastutik</p>
       <p>
